src/test/ui/borrowck/reassignment_immutable_fields_overlapping.stderr
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
error[E0381]: assign to part of possibly uninitialized variable: `x`
=======
error[E0381]: assign to part of possibly-uninitialized variable: `x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
  --> $DIR/reassignment_immutable_fields_overlapping.rs:12:5
   |
LL |     x.a = 1;
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
   |     ^^^^^^^ use of possibly uninitialized `x`
=======
   |     ^^^^^^^ use of possibly-uninitialized `x`
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)

error[E0594]: cannot assign to `x.b`, as `x` is not declared as mutable
  --> $DIR/reassignment_immutable_fields_overlapping.rs:13:5
   |
LL |     let x: Foo;
   |         - help: consider changing this to be mutable: `mut x`
LL |     x.a = 1;
LL |     x.b = 22;
   |     ^^^^^^^^ cannot assign

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0381`.
